--- a/sample/src/main/res/layout/fragment_dialog_key_name.xml
+++ b/sample/src/main/res/layout/fragment_dialog_key_name.xml
@@ -34,18 +34,23 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp" >
+    android:paddingTop="16dp"
+    android:paddingHorizontal="24dp" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_message" />
 
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="16dp" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/dialog_key"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/key"
@@ -54,11 +59,15 @@
             android:imeOptions="actionNext"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="16dp" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/dialog_name"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name"
